<resources>
    <string name="app_name">Calculator</string>
    <string name="enter_a_number">Enter a number</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_plus">+</string>
    <string name="cancel">c</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_minus">-</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_mul">*</string>
    <string name="btn_0">0</string>
    <string name="btn_point">.</string>
    <string name="btn_div">/</string>
    <string name="btn_equal">=</string>
    <string name="switch_theme">Switch Theme</string>
    <string name="settings">settings</string>
    <string name="text_settings">Настройки</string>
    <string name="text_switch_theme">Смена темы</string>
    <string name="day">Day</string>
    <string name="night">Night</string>
    <string name="exit">Exit</string>
</resources>