<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity"

    android:background="@drawable/forest">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textField"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="60dp"
        android:gravity="right|center"
        android:hint="@string/enter_a_number"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlHardcoded" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_1"
        android:text="@string/btn_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/button_4"
        app:layout_constraintEnd_toStartOf="@+id/button_2"
        app:layout_constraintTop_toBottomOf="@+id/textField"
        app:layout_constraintVertical_bias="0.3"
        style="@style/CalcButtonNumStyle"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_2"
        android:text="@string/btn_2"
        app:layout_constraintBottom_toTopOf="@+id/button_5"
        app:layout_constraintEnd_toStartOf="@+id/button_3"
        app:layout_constraintStart_toEndOf="@+id/button_1"
        app:layout_constraintTop_toBottomOf="@+id/textField"
        app:layout_constraintVertical_bias="0.3"
        style="@style/CalcButtonNumStyle"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_3"
        android:text="@string/btn_3"
        app:layout_constraintBottom_toTopOf="@id/button_6"
        app:layout_constraintEnd_toEndOf="@id/button_plus"
        app:layout_constraintStart_toEndOf="@+id/button_2"
        app:layout_constraintTop_toBottomOf="@+id/textField"
        app:layout_constraintVertical_bias="0.3"
        style="@style/CalcButtonNumStyle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_plus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_3"
        app:layout_constraintTop_toTopOf="@id/button_3"
        app:layout_constraintHorizontal_bias="0.3"
        style="@style/CalcButtonSignStyle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_cancel"
        android:text="@string/cancel"
        android:backgroundTint="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_plus"
        app:layout_constraintEnd_toEndOf="@id/button_plus"
        app:layout_constraintStart_toStartOf="@+id/button_plus"
        app:layout_constraintVertical_bias="1.0"
        style="@style/CalcButtonSignStyle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_4"
        android:text="@string/btn_4"
        app:layout_constraintBottom_toTopOf="@id/button_7"
        app:layout_constraintEnd_toStartOf="@+id/button_5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_1"
        style="@style/CalcButtonNumStyle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_5"
        android:text="@string/btn_5"
        app:layout_constraintBottom_toTopOf="@id/button_8"
        app:layout_constraintEnd_toStartOf="@id/button_6"
        app:layout_constraintStart_toEndOf="@id/button_4"
        app:layout_constraintTop_toBottomOf="@id/button_2"
        style="@style/CalcButtonNumStyle"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_6"
        android:text="@string/btn_6"
        app:layout_constraintBottom_toTopOf="@id/button_9"
        app:layout_constraintEnd_toEndOf="@id/button_minus"
        app:layout_constraintStart_toEndOf="@+id/button_5"
        app:layout_constraintTop_toBottomOf="@id/button_3"
        style="@style/CalcButtonNumStyle"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_minus"
        android:text="@string/btn_minus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_6"
        app:layout_constraintTop_toBottomOf="@id/button_plus"
        style="@style/CalcButtonSignStyle"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_7"
        android:text="@string/btn_7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_4"
        style="@style/CalcButtonNumStyle"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_8"
        android:text="@string/btn_8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_9"
        app:layout_constraintStart_toEndOf="@id/button_7"
        app:layout_constraintTop_toBottomOf="@+id/button_5"
        style="@style/CalcButtonNumStyle"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_9"
        android:text="@string/btn_9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/button_mul"
        app:layout_constraintStart_toEndOf="@+id/button_8"
        app:layout_constraintTop_toBottomOf="@id/button_6"
        style="@style/CalcButtonNumStyle"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_mul"
        android:text="@string/btn_mul"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_9"
        app:layout_constraintBottom_toTopOf="@id/button_div"
        style="@style/CalcButtonSignStyle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_0"
        android:layout_width="0dp"
        android:text="@string/btn_0"
        app:layout_constraintTop_toBottomOf="@+id/button_8"
        app:layout_constraintStart_toStartOf="@+id/button_7"
        app:layout_constraintEnd_toStartOf="@+id/button_point"
        style="@style/CalcButtonNumStyle"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_point"
        android:text="@string/btn_point"
        app:layout_constraintTop_toBottomOf="@+id/button_9"
        app:layout_constraintStart_toEndOf="@+id/button_0"
        style="@style/CalcButtonSignStyle"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_div"
        android:text="@string/btn_div"
        app:layout_constraintStart_toEndOf="@+id/button_point"
        app:layout_constraintTop_toTopOf="@id/button_point"
        app:layout_constraintEnd_toEndOf="@id/button_mul"
        style="@style/CalcButtonSignStyle"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_equal"
        android:text="@string/btn_equal"
        app:layout_constraintTop_toBottomOf="@+id/button_div"
        app:layout_constraintEnd_toEndOf="@id/button_div"
        style="@style/CalcButtonSignStyle"/>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/switch_theme"
        app:layout_constraintBottom_toTopOf="@+id/textField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>